--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-acad-roadmap",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "engine": {
     "node": "8.9.4"
   },
