--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-acad-roadmap",
+  "name": "myacadroadmap",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://my-acad-roadmap.herokuapp.com/",
   "engine": {
     "node": "8.9.4"
   },
