--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "heroku-postbuild": "cd client && npm install & npm run build",
   "engines": {
     "node": "8.9.4"
   },
