--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "heroku-postbuild": "cd client && npm install & npm run build",
   "engines": {
     "node": "8.9.4"
   },
   "scripts": {
     "test": "mocha --exit",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install & npm run build"
   },
   "author": "",
   "license": "ISC",
