--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "npm": ">=3.3.12 <6",
+    "node": ">=5.5.0 <10"
+  },
   "scripts": {
     "test": "mocha --exit",
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
+    "build": "check-node-version --package && ...",
+    "watch": "check-node-version --package && ..."
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +36,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "check-node-version": "^3.2.0",
     "faker": "^4.1.0",
     "mocha": "^5.2.0"
   }
