--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "my-acad-roadmap",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tsehayegh/myacadroadmap.git"
+  },
   "engines": {
     "npm": ">=3.3.12 <6",
     "node": ">=5.5.0 <10"
