--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "test": "mocha --exit",
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
+    "build": "webpack --config webpack.conf.js"
   },
   "author": "",
   "license": "ISC",
