--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,7 @@
   
   install:
     - npm ci
+
+  before-install:
+  - '[ "${TRAVIS_NODE_VERSION}" != "0.8" ] || npm install -g npm@1.4.28'
+  - npm install -g npm@latest
