build option from package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "mocha --exit",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
-    "build": "webpack --config webpack.conf.js"
+    "build": "npm run build:css && npm run build:js && npm run build:img"
   },
   "author": "",
   "license": "ISC",
