added script option in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ deploy:
   on:
     repo: tsehayegh/my-acad-roadmap
 
+script:
+  - npm run lint
+  - npm test
+after_success:
+  - npm run coverage
