--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,4 @@ deploy:
     repo: tsehayegh/my-acad-roadmap
 script:
   - npm test
-
-env:
-  - REACT=0.13
-  - REACT=0.14
-  - REACT=15.4
-  - REACT=15
-  - REACT=16
+  - cd client && npm install && npm test
